header section compleate

--- a/index.html
+++ b/index.html
@@ -1,11 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    ahanaf
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Fitness Assignment 2 | Ahanaf Mubasshir</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="responsive.css" />
+  </head>
+  <body>
+    <div class="container">
+
+        <header>
+            <nav class="navbar">
+              <div class="nav-logo">
+                <h1 class="text-color">FitZ</h1>
+              </div>
+              <div class="nav-link">
+                <div class="ul-link">
+                  <ul>
+                    <li><a class="bg-color" href="#">Home</a></li>
+                    <li><a href="#">Service</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">About</a></li>
+                  </ul>
+                </div>
+                <div class="toggle">
+                  <img src="images/toggle.png" alt="" />
+                </div>
+              </div>
+            </nav>
+            <!-- navbar ends -->
+            <!-- hero starts -->
+            <section id="hero" class="padding">
+              <div class="hero-content">
+                <h1 class="color">Get Body in <span>shape</span> & stay healthy</h1>
+                <p class="p-color">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
+                  minima ducimus aident illo voluptates illum eaque!
+                </p>
+                <div class="btn">
+                  <button class="bg-color">Join Club Now</button>
+                  <button class="download bg-color">Download App</button>
+                </div>
+              </div>
+              <div class="hero-img">
+                <img src="images/Images 2.png" alt="" />
+    
+                <div class="card1">
+                  <div class="card-l"></div>
+                  <div class="card-r">
+                    <h1>350 +</h1>
+                    <p class="p-color">Video Tutorial</p>
+                  </div>
+                </div>
+                <div class="card2">
+                  <div class="card-r">
+                    <h1>500 +</h1>
+                    <p class="p-color">Free Workout videos</p>
+                  </div>
+                </div>
+              </div>
+            </section>
+            <!-- hero ends -->
+          </header>
+
+    </div>
 </body>
 </html>
