habbit section updated

--- a/index.html
+++ b/index.html
@@ -63,7 +63,61 @@
             </section>
             <!-- hero ends -->
           </header>
+ <!-- header ends -->
 
+ <!-- main section starts here -->
+  <div class="main">
+     <!-- habbit section starts -->
+     <section id="habit" class="padding">
+        <h1 class="color">Change Your Habits</h1>
+        <p class="p-color">
+          Lorem ipsum dolor consectetur adipisicing elit. Obcaecati, porro.
+        </p>
+        <div class="habbit-card">
+          <div class="card">
+            <div class="card-img">
+              <img src="images/image 3.png" alt="" />
+            </div>
+            <h2 class="color">Movement</h2>
+            <h3 class="p-color">
+              Lorem ipsum dolor sit amet conse elit. Omnis, numquam.
+            </h3>
+          </div>
+          <div class="card">
+            <div class="card-img">
+              <img src="images/image 2.png" alt="" />
+            </div>
+            <h2 class="color">Time</h2>
+            <h3 class="p-color">
+              Lorem ipsum dolor sit amet conse elit. Omnis, numquam.
+            </h3>
+          </div>
+          <div class="card">
+            <div class="card-img">
+              <img src="images/image 4.png" alt="" />
+            </div>
+            <h2 class="color">Practice</h2>
+            <h3 class="p-color">
+              Lorem ipsum dolor sit amet conse elit. Omnis, numquam.
+            </h3>
+          </div>
+          <div class="card">
+            <div class="card-img">
+              <img src="images/image 5.png" alt="" />
+            </div>
+            <h2 class="color">Waight Loss</h2>
+            <h3 class="p-color">
+              Lorem ipsum dolor sit amet cons elit. Omnis, numquam.
+            </h3>
+          </div>
+        </div>
+      </section>
+      <!-- habbit section ends -->
+
+  </div>
+
+
+  
     </div>
 </body>
 </html>
