run section updated

--- a/index.html
+++ b/index.html
@@ -113,11 +113,29 @@
         </div>
       </section>
       <!-- habbit section ends -->
+ <!-- run section starts -->
+ <section id="run-section" class="margin">
+    <div class="run-content">
+      <h1 class="color">Run an Extra Mile Easily</h1>
+      <p class="p-color">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. maiores
+        molestiae. Lorem ipsum dolor sit amet, consectetur adipisicing.
+      </p>
+      <button class="bg-color color">Join Now</button>
+    </div>
+    <div class="run-img">
+      <img src="images/run.jpg" alt="" />
+    </div>
+  </section>
+  <!-- run section ends -->
+
+
+
 
   </div>
 
 
-  
+
     </div>
 </body>
 </html>
