new updated content name

--- a/index.html
+++ b/index.html
@@ -129,7 +129,75 @@
   </section>
   <!-- run section ends -->
 
-
+<!-- bmi calculator starts -->
+<section id="bmi-calc">
+    <div class="title-bmi">
+     <h1 class="color ">BMI Calculator</h1>
+     <p class="p-color p">
+       Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias esse
+       officia quae Lorem ipsum dolor sit amet c
+     </p>
+    </div>
+  
+     <div class="bmi-content">
+       <div class="bmi-table">
+         <h1 class="color">BMI Calculator Chart</h1>
+         <table>
+           <thead>
+             <tr>
+               <th>BMI</th>
+               <th>Weight Status</th>
+             </tr>
+           </thead>
+           <tbody>
+             <tr>
+               <td>Below 17.5</td>
+              <td>Underweight</td>
+             </tr>
+             <tr>
+               <td>17.5 - 23.9</td>
+               <td>Healthy</td>
+             </tr>
+             <tr>
+               <td>24.0 - 29.9</td>
+               <td>Overweight</td>
+             </tr>
+             <tr>
+               <td>30.0 - And Avobe</td>
+               <td>Obese</td>
+             </tr>
+           </tbody>
+         </table>
+       </div>
+       <div class="bmi-form">
+         <h1 class="color">Calculate your BMI</h1>
+         <p class="p-color">
+           Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis accusamus magnam minima?
+         </p>
+         <form action="">
+           <div class="f-div">
+             <input type="text" name="" id="" placeholder="Height/cm">
+             <input type="text" name="" id="" placeholder="Weight/kg">
+             <input type="text" name="" id="" placeholder="Age">
+             <select name="" id="">
+               <option value="Sex">Sex</option>
+               <option value="male">Male</option>
+               <option value="female">Female</option>
+             </select>
+           </div>
+  
+           <select name="" id="select">
+             <option value="Select">Select an activity factor</option>
+             <option value="Day">Day 8 - 10</option>
+             <option value="night"> Night 7 - 11</option>
+           </select>
+         </form>
+  
+         <button class="bg-color color ">Calculate</button>
+       </div>
+     </div>
+   </section>
+   <!-- bmi calculator ends -->
 
 
   </div>
