team section updated

--- a/index.html
+++ b/index.html
@@ -198,7 +198,53 @@
      </div>
    </section>
    <!-- bmi calculator ends -->
-
+ <!-- team section starts -->
+ <section id="team">
+  <h1 class="color">Meet Our Team</h1>
+  <p class="p-color">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil ut
+    pariatur veniam facilis u Lorem ipsum dolor sit amet.
+  </p>
+  <div class="team-picture">
+    <div class="picture1 pic1">
+      <div class="pic-1 pic">
+        <h2 class="color">Zom Tom</h2>
+        <p>Trainer</p>
+      </div>
+    </div>
+    <div class="picture2 pic1">
+      <div class="pic-2 pic">
+        <h2 class="color">Tom Moble</h2>
+        <p>Trainer</p>
+      </div>
+    </div>
+    <div class="picture3 pic1">
+      <div class="pic-3 pic">
+        <h2 class="color">Lara Bel</h2>
+        <p>Trainer</p>
+      </div>
+    </div>
+    <div class="picture4 pic1">
+      <div class="pic-4 pic">
+        <h2 class="color">Banim Hum</h2>
+        <p>Trainer</p>
+      </div>
+    </div>
+    <div class="picture5 pic1">
+      <div class="pic-5 pic">
+        <h2 class="color">Davit Lee</h2>
+        <p>Trainer</p>
+      </div>
+    </div>
+    <div class="picture6 pic1">
+      <div class="pic-6 pic">
+        <h2 class="color">Sammo</h2>
+        <p>Trainer</p>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- team section ends -->
 
   </div>
 
