updated lorem text

--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
               <div class="hero-content">
                 <h1 class="color">Get Body in <span>shape</span> & stay healthy</h1>
                 <p class="p-color">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-                  minima ducimus aident illo voluptates illum eaque!
+                  Each of these types helps in understanding different aspects of health and guides approaches to maintaining or improving well-being.
                 </p>
                 <div class="btn">
                   <button class="bg-color">Join Club Now</button>
@@ -71,7 +70,7 @@
      <section id="habit" class="padding">
         <h1 class="color">Change Your Habits</h1>
         <p class="p-color">
-          Lorem ipsum dolor consectetur adipisicing elit. Obcaecati, porro.
+          Changing your habits can be a transformative process
         </p>
         <div class="habbit-card">
           <div class="card">
@@ -80,7 +79,7 @@
             </div>
             <h2 class="color">Movement</h2>
             <h3 class="p-color">
-              Lorem ipsum dolor sit amet conse elit. Omnis, numquam.
+              Outline how you will incorporate the new habit into your routine
             </h3>
           </div>
           <div class="card">
@@ -89,7 +88,7 @@
             </div>
             <h2 class="color">Time</h2>
             <h3 class="p-color">
-              Lorem ipsum dolor sit amet conse elit. Omnis, numquam.
+              Sometimes, having someone to check in with can make a big difference
             </h3>
           </div>
           <div class="card">
@@ -98,7 +97,7 @@
             </div>
             <h2 class="color">Practice</h2>
             <h3 class="p-color">
-              Lorem ipsum dolor sit amet conse elit. Omnis, numquam.
+              Define what you want to achieve with your practice
             </h3>
           </div>
           <div class="card">
@@ -107,7 +106,7 @@
             </div>
             <h2 class="color">Waight Loss</h2>
             <h3 class="p-color">
-              Lorem ipsum dolor sit amet cons elit. Omnis, numquam.
+              Begin with manageable chunks If you're learning a new skill
             </h3>
           </div>
         </div>
@@ -118,8 +117,7 @@
     <div class="run-content">
       <h1 class="color">Run an Extra Mile Easily</h1>
       <p class="p-color">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. maiores
-        molestiae. Lorem ipsum dolor sit amet, consectetur adipisicing.
+        Incorporate a variety of workouts, including long runs, speed work, and interval training. This helps improve overall fitness and stamina, making the extra mile feel more achievable
       </p>
       <button class="bg-color color">Join Now</button>
     </div>
@@ -134,8 +132,7 @@
     <div class="title-bmi">
      <h1 class="color ">BMI Calculator</h1>
      <p class="p-color p">
-       Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias esse
-       officia quae Lorem ipsum dolor sit amet c
+      A Body Mass Index (BMI) calculator is a tool used to estimate an individual's body fat based on their weight and height.
      </p>
     </div>
   
@@ -172,7 +169,7 @@
        <div class="bmi-form">
          <h1 class="color">Calculate your BMI</h1>
          <p class="p-color">
-           Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis accusamus magnam minima?
+          If you prefer not to calculate it manually, you can use online BMI calculators. Simply enter your weight and height
          </p>
          <form action="">
            <div class="f-div">
@@ -202,8 +199,7 @@
  <section id="team">
   <h1 class="color">Meet Our Team</h1>
   <p class="p-color">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil ut
-    pariatur veniam facilis u Lorem ipsum dolor sit amet.
+    For a comprehensive assessment of health, consider consulting healthcare professionals who can .
   </p>
   <div class="team-picture">
     <div class="picture1 pic1">
@@ -317,9 +313,7 @@
     <div class="footer-1">
       <h1 class="text-color">FitZ</h1>
       <p class="p-color">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum sit
-        et ducimus autem? Lorem ipsum dolor sit amet consectetur
-        adipisicing elit. Sapiente, velit!Amet!
+        Recognize and celebrate your successes, no matter how small. This helps maintain motivation and reinforces the habit of going above and beyond
       </p>
     </div>
     <div class="footer-2 f">
